--- a/client-app/public/index.html
+++ b/client-app/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Social app created with ASP.Net Core & React"
+      content="ASP .Net Core with React | Social"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Social</title>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
